<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.it.dev.dialog.ActivityAlterDialogList">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_color"
            style="@style/btn_style"
            android:text="@string/str_colors" />

        <Button
            android:id="@+id/btn_setting"
            style="@style/btn_style"
            android:layout_below="@+id/btn_color"
            android:text="@string/str_setting" />

        <Button
            android:id="@+id/btn_size"
            style="@style/btn_style"
            android:layout_below="@+id/btn_setting"
            android:text="@string/str_size"

            />


        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/btn_size"
            android:layout_marginTop="5dp"
            android:background="#999"
            android:gravity="center"
            android:text="Hello Word ！" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
